all components done & fix scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,28 @@ body {
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  width: 18px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  background-color: #f0f0f0;
+  border-radius: 2px;
+
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #cfcfcf;
+  border-radius: 10px;
+  border: 5.5px solid transparent;
+  background-clip: content-box;
+} 
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
 a {
   color: inherit;
   text-decoration: none;
